2016-06-09  Martin Sebor  <msebor@redhat.com>

	PR c/70883
	* c-c++-common/builtin-arith-overflow-1.c: Adjust diagnostic text.
	* gcc.dg/builtin-constant_p-1.c: Same.
	* gcc.dg/builtins-error.c: Same.
	* gcc.dg/pr70859.c: Same.

2016-06-09  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* gcc.c-torture/execute/bswap-2.c: Require int32plus.
	* gcc.dg/torture/pr68067-1.c: Likewise.
	* gcc.dg/torture/pr68067-2.c: Likewise.

2016-06-09  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* gcc.dg/stack-usage-1.c (SIZE): Consider return address
	  when setting SIZE.

2016-06-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/71465
	* g++.dg/inherit/crash5.C: New.
	Revert:
	2016-06-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/70202
	* g++.dg/inherit/crash5.C: New.
	* g++.dg/inherit/virtual1.C: Adjust.

2016-06-09  Martin Liska  <mliska@suse.cz>

	* g++.dg/predict-loop-exit-1.C: Scan for a new dump format.
	* g++.dg/predict-loop-exit-2.C: Likewise.
	* g++.dg/predict-loop-exit-3.C: Likewise.
	* gcc.dg/predict-1.c: Likewise.
	* gcc.dg/predict-2.c: Likewise.
	* gcc.dg/predict-3.c: Likewise.
	* gcc.dg/predict-4.c: Likewise.
	* gcc.dg/predict-5.c: Likewise.
	* gcc.dg/predict-6.c: Likewise.
	* gcc.dg/predict-7.c: Likewise.

2016-06-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71462
	* gcc.dg/torture/pr71462.c: New testcase.

2016-06-09  Marek Polacek  <polacek@redhat.com>

	PR c/65471
	* gcc.dg/c11-generic-3.c: New test.

2016-06-08  Paolo Carlini  <paolo.carlini@oracle.com>

	* g++.dg/init/array42.C: New.
	* g++.dg/init/array43.C: Likewise.
	* g++.dg/init/array44.C: Likewise.
	* g++.dg/init/array45.C: Likewise.
	* g++.dg/cpp0x/constexpr-ice10.C: Test column number too.
	* g++.dg/cpp0x/constexpr-incomplete1.C: Likewise.
	* g++.dg/cpp1y/auto-fn27.C: Likewise.
	* g++.dg/gomp/pr35751.C: Likewise.
	* g++.dg/init/array23.C: Likewise.
	* g++.dg/init/brace2.C: Likewise.
	* g++.dg/init/brace6.C: Likewise.
